--- a/style.css
+++ b/style.css
@@ -4,10 +4,21 @@
     margin: auto;
     padding: 0;
     text-align: center;
+    font-family: sans-serif;
+}
+
+body {
+    background-color: black;
+}
+
+h1 {
+    color: white;
+    font-size: 31px;
 }
 
 .shirts-box {
     padding: 10px;
+    justify-content: center;
 }
 
 .shirt {
