--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 header {
     max-width: 500px;
-    padding: 10px 0px 10px 0px;
+    padding: 20px 0px 20px 0px;
     background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4 );
 }
 
@@ -44,7 +44,7 @@ h1 {
     word-spacing: 7px;
     color: var(--cor4);
     text-shadow: 4px 4px 5px black;
-    font-size: 40px;
+    font-size: 60px;
 }
 
 h2 {
@@ -53,8 +53,8 @@ h2 {
     letter-spacing: 2px;
     line-height: 1.1em;
     color: black;
-    text-shadow: 1px 1px 1px var(--cor4);
-    font-size: 17px;
+    text-shadow: 2px 2px 1px var(--cor4);
+    font-size: 25px;
 }
 
 nav {
@@ -65,12 +65,15 @@ nav {
 
 nav > a {
     color: var(--cor4);
+    font-family: var(--fonte-destaque);
+    letter-spacing: 2px;
     text-decoration: none;
-    font-weight: bold;
+    
 }
 
 nav > a:hover {
     text-decoration: underline;
+    font-weight: bold;
 
 }
 
