--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2 {
     line-height: 1.1em;
     color: black;
     text-shadow: 2px 2px 1px var(--cor4);
-    font-size: 20px;
+    font-size: 23px;
 }
 
 nav {
@@ -86,7 +86,7 @@ nav > a:hover {
 
 main {
     max-width: 500px;
-    background-color: black;
+    background-color: var(--cor3);
 }
 
 .shirts-box {
