--- a/style.css
+++ b/style.css
@@ -87,17 +87,19 @@ nav > a:hover {
 main {
     max-width: 500px;
     background-color: var(--cor3);
-    background-image: url(./imagens/toejam.gif);
+    background-image: url(./imagens/fire5-mod.jpg);
     background-size: 100%;
     background-repeat: repeat-y;
 }
 
 .shirts-box {
     justify-content: center;
+    padding: 30px 0px 0px 0px;
 }
 
 .shirt {
     max-width: 350px;
+    padding: 0px 0px 30px 0px;
 }
 
 .shirt p {
@@ -105,6 +107,7 @@ main {
     color: var(--cor4);
     font-family: var(--fonte-destaque);
     font-size: large;
+    letter-spacing: 1px;
 }
 
 .shirt img {
