--- a/style.css
+++ b/style.css
@@ -7,6 +7,21 @@
     src: url('./fontes/DonGraffiti.otf') format('opentype');
 }
 
+/* 
+Solicitações do Gui:
+1. Colocar borda nas imagens mantendo o tamanho total e diminuindo um pouco o tamanho da imagem;
+2. Fazer com que o nome dos times ocupe um pouco mais de espaço, espaçamento entre as letras e afins;
+3. Estilizar uma caixa para "Futebol" e "Basquete", no nav.(exemplo no zap);
+4. Adicionar uma orientação para a pessoa enviar o numero da camiseta na qual se interessou, pelo whats;
+5. Adicionar um botão de voltar ao topo ou congelar o cabeçalho com nav(talvez uma versão compacta dele);
+
+Minhas observações:
+1. Colocar sombra do botão do zap e tentar um efeito de press;
+2. Adicionar esse mesmo efeito aos botões do nav e do possivel "voltar ao toop";
+2. Tirar a coloração azul do link do instagram;
+3. Estudar uma barra de pesquisa para colocar no site;
+*/
+
 :root {
     --cor0: #119DA4;
     --cor1: #0C7489;
