--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ Solicitações do Gui:
 3. Estilizar uma caixa para "Futebol" e "Basquete", no nav.(exemplo no zap);
 4. Adicionar uma orientação para a pessoa enviar o numero da camiseta na qual se interessou, pelo whats;
 5. Adicionar um botão de voltar ao topo ou congelar o cabeçalho com nav(talvez uma versão compacta dele);
+6. Adicionar info que o calor parcelado tem adicional de tx de máquina;
 
 Minhas observações:
 1. Colocar sombra do botão do zap e tentar um efeito de press;
