--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ Minhas observações:
 }
 
 * {
-    margin: auto;
+    margin: 0px;
     padding: 0px;
     text-align: center;
     font-family: var(--fonte-padrao);
@@ -48,7 +48,6 @@ body {
 }
 
 header {
-    max-width: 500px;
     padding: 33px 0px 33px 0px;
     background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4 );
 }
@@ -71,60 +70,65 @@ h2 {
 }
 
 nav {
+    padding: 5px 0px;
+    background-color: var(--cor2);
+    width: 100%;
     position: sticky;
     top: 0px;
-    padding: 5px 0px 5px 0px;
-    background-color: var(--cor2);
-    max-width: 500px;
+}
+nav ul {
+    justify-content: space-around;
+    display: flex;
+    text-align: center;
+    list-style: none;
 }
 
-nav > a {
+nav ul li {
+    box-sizing: border-box;
+}
+
+li a {
     color: var(--cor4);
     font-family: var(--fonte-destaque);
     letter-spacing: 1.5px;
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
 
-nav > a:hover {
+li > a:hover {
     font-weight: bold;
-
-}
-
-.futebol {
-    padding-right: 60px;
-}
-
-.basquete {
-    padding-left: 60px;
 }
 
 main {
+    margin: auto;
+    padding-top: 10px;
     max-width: 500px;
     background-color: var(--cor3);
     background-image: url(./imagens/fire5-mod.jpg);
     background-size: 100%;
     background-repeat: repeat-y;
 }
+    
 
 .price-box {
+    
+    margin-left: 30px;
+    margin-right: 30px;
     padding: 5px;
-    margin-top: 10px;
     margin-bottom: 10px;
     background-image: linear-gradient(to left, transparent, #13505b, #0C7489, #119DA4, #0C7489, #13505b, transparent);
-    max-width: 350px;
+    
 }
 
 .price-box > p {
+    
     margin-top: 10px;
     color: var(--cor4);
-    width:fit-content;
     font-family: var(--fonte-destaque);
     letter-spacing: 0.5px;
     background-image: linear-gradient(to left, transparent, black, black, transparent);
 }
 
-.shirts-box {
+.shirt-list {
     justify-content: center;
 }
 
@@ -151,7 +155,6 @@ main {
 }
 
 footer {
-    max-width: 500px;
     color: var(--cor4);
     background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4 );
 }
