--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ body {
 
 header {
     padding: 33px 0px 33px 0px;
-    background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4 );
+    background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4);
 }
 
-header > h1 {
+header>h1 {
     font-family: var(--fonte-titulo);
     letter-spacing: 5px;
     color: var(--cor4);
@@ -76,6 +76,7 @@ nav {
     position: sticky;
     top: 0px;
 }
+
 nav ul {
     justify-content: space-around;
     display: flex;
@@ -91,36 +92,40 @@ li a {
     color: var(--cor4);
     font-family: var(--fonte-destaque);
     letter-spacing: 1.5px;
-    text-decoration: none; 
+    text-decoration: none;
 }
 
-li > a:hover {
+li>a:hover {
     font-weight: bold;
 }
 
 main {
     margin: auto;
     padding-top: 10px;
-    max-width: 500px;
     background-color: var(--cor3);
-    background-image: url(./imagens/fire5-mod.jpg);
+    background-image: url(./imagens/fire5-mod-desktop.png);
     background-size: 100%;
-    background-repeat: repeat-y;
 }
-    
+
+ol {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0px 80px;
+}
 
 .price-box {
-    
+
     margin-left: 30px;
     margin-right: 30px;
     padding: 5px;
     margin-bottom: 10px;
     background-image: linear-gradient(to left, transparent, #13505b, #0C7489, #119DA4, #0C7489, #13505b, transparent);
-    
+
 }
 
-.price-box > p {
-    
+.price-box>p {
+
     margin-top: 10px;
     color: var(--cor4);
     font-family: var(--fonte-destaque);
@@ -133,10 +138,9 @@ main {
 }
 
 .shirt {
-    box-sizing: border-box;
     border: 4px solid var(--cor1);
-    margin-bottom: 25px;
-    max-width: 330px;
+    margin: 20px;
+    width: 400px;
 }
 
 .shirt li {
@@ -156,14 +160,14 @@ main {
 
 footer {
     color: var(--cor4);
-    background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4 );
+    background-image: linear-gradient(to bottom, #13505b, #0C7489, #119DA4);
 }
 
-footer > a {
+footer>a {
     text-decoration: none;
 }
 
-footer > h1 {
+footer>h1 {
     font-family: var(--fonte-titulo);
     color: var(--cor4);
     letter-spacing: 4px;
@@ -176,23 +180,23 @@ footer > h1 {
     padding: 10px 0px 30px 60px;
 }
 
-.link-img > a {
+.link-img>a {
     margin: 0px;
 }
 
-.link-img > p {
+.link-img>p {
     margin: 0px;
     padding-left: 4px;
     font-family: var(--fonte-destaque);
     font-size: 20px;
 }
 
-.link-img > p > a {
+.link-img>p>a {
     text-decoration: none;
     font-family: var(--fonte-destaque)
 }
 
-.link-img > p > a:hover {
+.link-img>p>a:hover {
     font-weight: bold;
 }
 
@@ -206,3 +210,22 @@ footer > h1 {
 .wpp-ico {
     width: 100%;
 }
+
+
+@media (max-width: 1024px) {
+    main {
+        background-image: url(./imagens/fire5-mod-tablet.png);
+        background-size: 100%;
+    }
+    .shirt {
+        margin: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    main {
+        background-image: url(./imagens/fire5-mod.jpg);
+        background-size: 100%;
+    }
+}
+
