--- a/style.css
+++ b/style.css
@@ -70,39 +70,56 @@ h2 {
 }
 
 nav {
-    padding: 5px 0px;
     background-color: var(--cor0);
-    width: 100%;
-    position: sticky;
-    top: 0px;
+    padding: 5px;
+    
 }
 
 nav ul {
-    justify-content: space-around;
-    display: flex;
-    text-align: center;
-    justify-content: center;
     list-style: none;
 }
 
-.futebol,
-.basquete {
+nav a {
+    font-family: var(--fonte-destaque);
+    font-size: 22px;
+    text-decoration: none;
+    letter-spacing: 1.5px;
     color: var(--cor4);
     background-color: var(--cor2);
-    font-family: var(--fonte-destaque);
+    padding: 0px 20px;
     border: 2px solid var(--cor2);
     border-radius: 5px;
-    padding: 0px 20px;
-    margin: 0px 5px;
-    padding-right: -5px;
-    letter-spacing: 1.5px;
-    text-decoration: none;
-    font-size: 22px;
+    transition: 0.3s;
 }
 
-li>a:hover {
-    border: 2px solid var(--cor4);
+nav a:hover {
     background-color: var(--cor1);
+    border: 2px solid var(--cor4);
+}
+
+.menu-externo li {
+    display: inline-block;
+}
+
+.menu-interno {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.menu-interno li{
+    display: flex;
+    width: 100%;
+}
+
+.menu-interno li a {
+    border: none;
+    border-radius: 0px;
+    width: 100%;
+}
+
+.menu-externo li:hover .menu-interno {
+    display: block;
 }
 
 main {
@@ -121,7 +138,6 @@ ol {
 }
 
 .price-box {
-
     margin-left: 30px;
     margin-right: 30px;
     padding: 5px;
@@ -273,8 +289,7 @@ footer>p {
         background-size: 100%;
     }
 
-    .futebol,
-    .basquete {
+    nav a {
         font-size: 15px;
     }
 
