--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer>p {
 .link-img>p>a {
     color: black;
     text-decoration: none;
-    font-family: var(--fonte-destaque)
+    font-family: var(--fonte-destaque);
 }
 
 .link-img>p>a:hover {
@@ -287,10 +287,6 @@ footer>p {
     main {
         background-image: url(./imagens/fire5-mod.jpg);
         background-size: 100%;
-    }
-
-    nav a {
-        font-size: 15px;
     }
 
     ol {
