--- a/style.css
+++ b/style.css
@@ -9,18 +9,13 @@
 
 /* 
 Solicitações do Gui:
-1. Colocar borda nas imagens mantendo o tamanho total e diminuindo um pouco o tamanho da imagem;
-2. Fazer com que o nome dos times ocupe um pouco mais de espaço, espaçamento entre as letras e afins;
-3. Estilizar uma caixa para "Futebol" e "Basquete", no nav.(exemplo no zap);
-4. Adicionar uma orientação para a pessoa enviar o numero da camiseta na qual se interessou, pelo whats;
-5. Adicionar um botão de voltar ao topo ou congelar o cabeçalho com nav(talvez uma versão compacta dele);
-6. Adicionar info que o calor parcelado tem adicional de tx de máquina;
+1. Adicionar info que o valor parcelado tem adicional de tx de máquina;
 
 Minhas observações:
 1. Colocar sombra do botão do zap e tentar um efeito de press;
-2. Adicionar esse mesmo efeito aos botões do nav e do possivel "voltar ao toop";
-2. Tirar a coloração azul do link do instagram;
+2. Adicionar esse mesmo efeito aos botões do nav e do possivel "voltar ao topo";
 3. Estudar uma barra de pesquisa para colocar no site;
+4. Colocar um logo no header pra estilizar o titulo;
 */
 
 :root {
